--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Async callback manager.  Use async.now to run a set of functions in parallel or async.next to run in series.",
   "main": "lib/async.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/index.js"
   },
   "repository": {
     "type": "git",
